Implementación de logica para operaciones CRUD de usuarios

--- a/ProyectoFinal/src/main/webapp/index.html
+++ b/ProyectoFinal/src/main/webapp/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    
+
     <title>Proyecto Java</title>
   </head>
   <body>
@@ -31,6 +35,8 @@
                 </a>
                 <br>
                 <a>Fede</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item">Salir</a>
             </div>
         </div> 
     </nav> 
@@ -83,13 +89,8 @@
         </table>
       </div>
     </main>
-    <footer style="margin-top: 0" class="jumbotron text-center">
+    <footer style="margin-bottom: 0;" class="jumbotron text-center">
       <h6>Educacion IT</h6>
-    </footer>
-    <div class="dropdown show">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
-        </a>
-   
+    </footer> 
   </body>
 </html>
